[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Button/ItemButton.gd" type="Script" id=1]
[ext_resource path="res://Art/font/montserrat_dynamicfont.tres" type="DynamicFont" id=2]

[node name="ItemButton" type="Control"]
margin_right = 32.0
margin_bottom = 58.0
rect_min_size = Vector2( 32, 58 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="slot_name" type="Label" parent="Button"]
margin_top = 42.0
margin_right = 32.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
align = 1
valign = 1

[node name="item_icon" type="Sprite" parent="Button"]
position = Vector2( 16, 16 )
scale = Vector2( 2.1875, 1.875 )

[node name="item_price" type="Label" parent="Button"]
margin_top = 37.0
margin_right = 32.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "#"
align = 1

